# qqc

./: Cargo.toml  README.md  example.json  index.html  manifest.json  qqc-42c22bd8c5d8af87.js  qqc-42c22bd8c5d8af87_bg.wasm  sw.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
src/app/: export.rs  file_upload.rs  interview.rs  number_selector.rs  parse_interview.rs  section.rs
src/app/parse_interview/: standard.rs  vtt.rs
