[package]
name = "qqc"
version = "0.1.0"
authors = ["Marcus Dunn <marcus.s.dunn@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
rfd = "0.10.0"
egui-toast = "0.4.0"
wasm-bindgen-futures = "0.4.33"
serde_json = "1.0.87"
tracing = "0.1.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2
